<resources>
    <string name="app_name">PizzaMania</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="branch_name">Branch Name</string>
    <string name="branch_address">Branch Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="set_location_on_map">Set Location on map</string>
    <string name="save_branch">Save Branch</string>
    <string name="update_branch">Update Branch</string>
    <string name="view_branch">View Branches</string>
    <string name="enter_nearest_city">Enter nearest City</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="card_payment">Card Payment</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvv">CVV</string>
    <string name="place_order">Place Order</string>
    <string name="type_a_message">type a message</string>
    <string name="send">Send</string>
    <string name="view_location">View Location</string>
    <string name="delete_branch">Delete Branch</string>
    <string name="add_branch">Add Branch</string>

    <string name="select_role">Select Role</string>
    <string name="select_branch">Select Branch</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="role_admin">Admin</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firebase_api_key">AIzaSyA_qx5SVoPHUClZ-ouyJS_kg2WBQeHPRdc</string>
    <string name="firebase_db_url">https://pizza-mania-group-08-default-rtdb.firebaseio.com</string>
    <string name="firebase_app_id">1:420274150318:android:21335d498ec718d898463f</string>

</resources>

