<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewBranches"
    android:padding="12dp"
    android:background="@color/white"
    android:elevation="2dp"
    android:orientation="vertical">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       android:padding="12dp"
       android:background="@color/white"
       android:layout_marginTop="0dp"
       android:elevation="2dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:id="@+id/txtBranchName"
           android:text="@string/branch_name"
           android:textSize="18sp"
           android:textStyle="bold"/>

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/branch_address"
           android:textSize="14sp"
           android:layout_marginTop="4dp"
           android:textStyle="bold"/>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:orientation="horizontal"
           android:layout_marginTop="8dp">

           <Button
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:id="@+id/btnViewLocation"
               android:text="@string/view_location"/>

           <Button
               android:layout_width="0dp"
               android:layout_height="wrap_content"
               android:layout_weight="1"
               android:id="@+id/btnDeleteBranch"
               android:text="@string/delete_branch"/>

       </LinearLayout>

   </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fabAddBranch"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="16dp"
        app:srcCompat= "@drawable/baseline_add_24"
        app:tint = "@color/white"
        android:contentDescription="@string/add_branch"/>

</RelativeLayout>